@@ -723,21 +723,24 @@ int mom_open_poll()
 }
 
 
-int
-qs_cmp(a, b)
-    struct	kinfo_proc	*a;
-    struct	kinfo_proc	*b;
-{
-	return((int)a->kp_eproc.e_paddr - (int)b->kp_eproc.e_paddr);
-}
+int qs_cmp(
 
-int
-bs_cmp(key, member)
-    struct	session		*key;
-    struct	kinfo_proc	*member;
-{
-	return((int)key->s_leader - (int)member->kp_eproc.e_paddr);
-}
+  const void *a,
+  const void *b)
+
+  {
+  return((int)((struct kinfo_proc *)a)->kp_eproc.e_paddr - (int)((struct kinfo_proc *)b)->kp_eproc.e_paddr);
+  }
+
+int bs_cmp(
+
+  const void *key,
+  const void *member)
+
+  {
+  return((int)((struct session *)key)->s_leader - (int)((struct kinfo_proc *)member)->kp_eproc.e_paddr);
+  }
+
 
 /*
  * Declare start of polling loop.
